src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "~bootstrap";
@import "~@ng-select/ng-select/themes/default.theme.css";
@import "highlight.js/styles/darcula.css";

html,
body {
  width: 100%;
  height: 100%;
}
body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
  white-space: normal !important;
}

.app-container {
  @extend .container-fluid;
  @extend .p-0;
  @extend .m-0;
  height: 100%;
  flex-direction: column;
  flex-wrap: wrap;
}

.container-flex {
  @extend .container-fluid;
  @extend .d-flex;
  @extend .px-0;
}

.container-flex-full {
  @extend .container-flex;
  height: 100%;
}

.centered-flex {
  @extend .justify-content-center;
  @extend .align-items-center;
}

.fill-height {
  flex-grow: 1;
}

.container-centered-flex {
  @extend .container-flex-full;
  @extend .centered-flex;
}

.row-flex {
  @extend .row;
  @extend .px-0;
  @extend .mb-1;
  width: 100%;
}

.row-flex-mb-0 {
  @extend .row;
  @extend .px-0;
  @extend .mb-0;
  width: 100%;
}

.flex-direction-row {
  @extend .flex-row;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

@for $size from 0 to 21 {
  .h-#{$size * 5} {
    height: percentage($size * 5 / 100);
  }
  .w-#{$size * 5} {
    width: percentage($size * 5 / 100);
  }
}

